added memory manager class

--- a/src/lib/makefile
+++ b/src/lib/makefile
@@ -16,7 +16,7 @@
 # along with this program.  If not, see <http://www.gnu.org/licenses/>.
 
 CC=clang++
-CC_FLAGS=-march=native -pthread -std=gnu++11 -O3 -Wall -Werror -fPIC
+CC_FLAGS=-march=native -pthread -std=gnu++11 -O3 -Wall -Werror
 DIR_BIN=./../../bin/
 DIR_BUILD=./../../build/
 DIR_INC=./include/
@@ -28,11 +28,11 @@ all: build archive
 archive:
 	@echo ''
 	@echo '--- BUILDING LIBRARY -----------------------'
-	ar rcs $(DIR_BUILD)$(LIB) $(DIR_BUILD)nes.o $(DIR_BUILD)nes_exception.o
+	ar rcs $(DIR_BUILD)$(LIB) $(DIR_BUILD)nes.o $(DIR_BUILD)nes_exception.o $(DIR_BUILD)nes_memory.o
 	@echo '--- DONE -----------------------------------'
 	@echo ''
 
-build: nes.o nes_exception.o
+build: nes.o nes_exception.o nes_memory.o
 
 nes.o: $(DIR_SRC)nes.cpp $(DIR_INC)nes.h
 	$(CC) $(CC_FLAGS) -c $(DIR_SRC)nes.cpp -o $(DIR_BUILD)nes.o
@@ -41,3 +41,6 @@ nes_exception.o: $(DIR_SRC)nes_exception.cpp $(DIR_INC)nes_exception.h
 	$(CC) $(CC_FLAGS) -c $(DIR_SRC)nes_exception.cpp -o $(DIR_BUILD)nes_exception.o
 
 # COMPONENTS
+
+nes_memory.o: $(DIR_SRC)nes_memory.cpp $(DIR_INC)nes_memory.h
+	$(CC) $(CC_FLAGS) -c $(DIR_SRC)nes_memory.cpp -o $(DIR_BUILD)nes_memory.o
