--- a/src/lib/makefile
+++ b/src/lib/makefile
@@ -28,11 +28,14 @@ all: build archive
 archive:
 	@echo ''
 	@echo '--- BUILDING LIBRARY -----------------------'
-	ar rcs $(DIR_BUILD)$(LIB) $(DIR_BUILD)nes.o $(DIR_BUILD)nes_cpu.o $(DIR_BUILD)nes_exception.o $(DIR_BUILD)nes_memory.o $(DIR_BUILD)nes_test.o $(DIR_BUILD)nes_test_cpu.o $(DIR_BUILD)nes_memory.o
+	ar rcs $(DIR_BUILD)$(LIB) $(DIR_BUILD)libnes.o $(DIR_BUILD)nes.o $(DIR_BUILD)nes_cpu.o $(DIR_BUILD)nes_exception.o $(DIR_BUILD)nes_memory.o $(DIR_BUILD)nes_test.o $(DIR_BUILD)nes_test_cpu.o $(DIR_BUILD)nes_memory.o
 	@echo '--- DONE -----------------------------------'
 	@echo ''
 
-build: nes.o nes_cpu.o nes_exception.o nes_memory.o nes_test.o nes_test_cpu.o nes_test_memory.o
+build: libnes.o nes.o nes_cpu.o nes_exception.o nes_memory.o nes_test.o nes_test_cpu.o nes_test_memory.o
+
+libnes.o: $(DIR_SRC)libnes.cpp $(DIR_INC)libnes.h
+	$(CC) $(CC_FLAGS) -c $(DIR_SRC)libnes.cpp -o $(DIR_BUILD)libnes.o
 
 nes.o: $(DIR_SRC)nes.cpp $(DIR_INC)nes.h
 	$(CC) $(CC_FLAGS) -c $(DIR_SRC)nes.cpp -o $(DIR_BUILD)nes.o
