added rom class test cases (partial)

--- a/src/lib/makefile
+++ b/src/lib/makefile
@@ -28,11 +28,11 @@ all: build archive
 archive:
 	@echo ''
 	@echo '--- BUILDING LIBRARY -----------------------'
-	ar rcs $(DIR_BUILD)$(LIB) $(DIR_BUILD)libnes.o $(DIR_BUILD)nes.o $(DIR_BUILD)nes_cpu.o $(DIR_BUILD)nes_exception.o $(DIR_BUILD)nes_memory.o $(DIR_BUILD)nes_rom.o $(DIR_BUILD)nes_test.o $(DIR_BUILD)nes_test_cpu.o $(DIR_BUILD)nes_test_memory.o
+	ar rcs $(DIR_BUILD)$(LIB) $(DIR_BUILD)libnes.o $(DIR_BUILD)nes.o $(DIR_BUILD)nes_cpu.o $(DIR_BUILD)nes_exception.o $(DIR_BUILD)nes_memory.o $(DIR_BUILD)nes_rom.o $(DIR_BUILD)nes_test.o $(DIR_BUILD)nes_test_cpu.o $(DIR_BUILD)nes_test_memory.o $(DIR_BUILD)nes_test_rom.o
 	@echo '--- DONE -----------------------------------'
 	@echo ''
 
-build: libnes.o nes.o nes_cpu.o nes_exception.o nes_memory.o nes_rom.o nes_test.o nes_test_cpu.o nes_test_memory.o
+build: libnes.o nes.o nes_cpu.o nes_exception.o nes_memory.o nes_rom.o nes_test.o nes_test_cpu.o nes_test_memory.o nes_test_rom.o
 
 libnes.o: $(DIR_SRC)libnes.cpp $(DIR_INC)libnes.h
 	$(CC) $(CC_FLAGS) -c $(DIR_SRC)libnes.cpp -o $(DIR_BUILD)libnes.o
@@ -64,3 +64,6 @@ nes_test_cpu.o: $(DIR_SRC)nes_test_cpu.cpp $(DIR_INC)nes_test_cpu.h
 
 nes_test_memory.o: $(DIR_SRC)nes_test_memory.cpp $(DIR_INC)nes_test_memory.h
 	$(CC) $(CC_FLAGS) -c $(DIR_SRC)nes_test_memory.cpp -o $(DIR_BUILD)nes_test_memory.o
+
+nes_test_rom.o: $(DIR_SRC)nes_test_rom.cpp $(DIR_INC)nes_test_rom.h
+	$(CC) $(CC_FLAGS) -c $(DIR_SRC)nes_test_rom.cpp -o $(DIR_BUILD)nes_test_rom.o
